--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- main css file -->
-    <link rel="stylesheet" href="/Css/Leon.css">
+    <link rel="stylesheet" href="Css/Leon.css">
     <!-- normalize css -->
     <link rel="stylesheet" href="Css/normalize.css">
     <!-- font awesome library -->
